--- a/static/Index.html
+++ b/static/Index.html
@@ -1,6 +1,7 @@
 <!document html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, intitial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
 </head>
@@ -22,10 +23,12 @@
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Screw You" name="visitorName">
         </div>
-        <button type="submit" class="btn btn-default">Get Spammed here</button>
         <div class="form-group">
             <label for="email">Email</label>
             <input type="email" class="form-control" id="email" placeholder="spammalot@haha.com" name="visitorEmail">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-default">Get Spammed here</button>
         </div>
     </form>
 </div>
